# CrownDiligentEngine

./: .gitignore  CMakeLists.txt  CrownDiligentEngine.cpp  CrownDiligentEngine.h  FirstPersonCamera.cpp  FirstPersonCamera.hpp  GLFWSample.h  README.md
Core/: Profiler.cpp  Profiler.hpp
Core/Graphics/: Mesh.cpp  Mesh.hpp  ObjModel.cpp  ObjModel.hpp  ShadowSettings.h
Core/Graphics/Primary/: Cube.cpp  Cube.hpp  CubeInstance.cpp  CubeInstance.hpp  Sphere.cpp  Sphere.hpp
Dependencies/MemPlumber/Lib/: memplumber.lib
Dependencies/freetype/lib/: freetyped.lib
Dependencies/freetype/lib/pkgconfig/: freetype2.pc
Dependencies/tracy/lib/: TracyClient.lib
DiligentFX/Components/interface/: ShadowMapManager.hpp
DiligentTools/Imgui/src/: ImGuiImplWin32.cpp
assets/: BasicStructures.fxh  GLTF_PBR_Shading.fxh  MeshPS.psh  MeshVS.vsh  RenderTest_PBR.psh  RenderTest_PBR.vsh  cube.psh  cube.vsh  cube_inst.psh  cube_inst.vsh  debugShadow.psh  debugShadow.vsh  model.psh  model.vsh  modelShadow.psh  modelShadow.vsh  shadow_map.vsh
assets/Model/Sponza/: sponza.cro  sponza.mtl
